Language.Implementation.Patterns/cxx/walking/patterns/gen/VecMathParser.cpp

// Generated from VecMath.g4 by ANTLR 4.13.0


#include "VecMathListener.h"
#include "VecMathVisitor.h"

#include "VecMathParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct VecMathParserStaticData final {
  VecMathParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  VecMathParserStaticData(const VecMathParserStaticData&) = delete;
  VecMathParserStaticData(VecMathParserStaticData&&) = delete;
  VecMathParserStaticData& operator=(const VecMathParserStaticData&) = delete;
  VecMathParserStaticData& operator=(VecMathParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag vecmathParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
VecMathParserStaticData *vecmathParserStaticData = nullptr;

void vecmathParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (vecmathParserStaticData != nullptr) {
    return;
  }
#else
  assert(vecmathParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<VecMathParserStaticData>(
    std::vector<std::string>{
      "prog", "stat", "expr", "multExpr", "primary"
    },
    std::vector<std::string>{
      "", "'='", "'print'", "'+'", "'.'", "'['", "','", "']'", "'('", "')'", 
      "", "", "", "'*'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "ID", "INT", "WS", "MULT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  vecmathParserStaticData = staticData.release();
}

}

VecMathParser::VecMathParser(TokenStream *input) : VecMathParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

VecMathParser::VecMathParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  VecMathParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *vecmathParserStaticData->atn, vecmathParserStaticData->decisionToDFA, vecmathParserStaticData->sharedContextCache, options);
}

VecMathParser::~VecMathParser() {
  delete _interpreter;
}

const atn::ATN& VecMathParser::getATN() const {
  return *vecmathParserStaticData->atn;
}

std::string VecMathParser::getGrammarFileName() const {
  return "VecMath.g4";
}

const std::vector<std::string>& VecMathParser::getRuleNames() const {
  return vecmathParserStaticData->ruleNames;
}

const dfa::Vocabulary& VecMathParser::getVocabulary() const {
  return vecmathParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView VecMathParser::getSerializedATN() const {
  return vecmathParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

VecMathParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<VecMathParser::StatContext *> VecMathParser::ProgContext::stat() {
  return getRuleContexts<VecMathParser::StatContext>();
}

VecMathParser::StatContext* VecMathParser::ProgContext::stat(size_t i) {
  return getRuleContext<VecMathParser::StatContext>(i);
}


size_t VecMathParser::ProgContext::getRuleIndex() const {
  return VecMathParser::RuleProg;
}

void VecMathParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void VecMathParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


std::any VecMathParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VecMathVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

VecMathParser::ProgContext* VecMathParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, VecMathParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(11); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(10);
      stat();
      setState(13); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == VecMathParser::T__1

    || _la == VecMathParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

VecMathParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VecMathParser::StatContext::ID() {
  return getToken(VecMathParser::ID, 0);
}

VecMathParser::ExprContext* VecMathParser::StatContext::expr() {
  return getRuleContext<VecMathParser::ExprContext>(0);
}


size_t VecMathParser::StatContext::getRuleIndex() const {
  return VecMathParser::RuleStat;
}

void VecMathParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void VecMathParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}


std::any VecMathParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VecMathVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

VecMathParser::StatContext* VecMathParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, VecMathParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(20);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case VecMathParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(15);
        match(VecMathParser::ID);
        setState(16);
        match(VecMathParser::T__0);
        setState(17);
        expr();
        break;
      }

      case VecMathParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(18);
        match(VecMathParser::T__1);
        setState(19);
        expr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

VecMathParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<VecMathParser::MultExprContext *> VecMathParser::ExprContext::multExpr() {
  return getRuleContexts<VecMathParser::MultExprContext>();
}

VecMathParser::MultExprContext* VecMathParser::ExprContext::multExpr(size_t i) {
  return getRuleContext<VecMathParser::MultExprContext>(i);
}


size_t VecMathParser::ExprContext::getRuleIndex() const {
  return VecMathParser::RuleExpr;
}

void VecMathParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void VecMathParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}


std::any VecMathParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VecMathVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

VecMathParser::ExprContext* VecMathParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 4, VecMathParser::RuleExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(22);
    multExpr();
    setState(27);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == VecMathParser::T__2) {
      setState(23);
      match(VecMathParser::T__2);
      setState(24);
      multExpr();
      setState(29);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultExprContext ------------------------------------------------------------------

VecMathParser::MultExprContext::MultExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<VecMathParser::PrimaryContext *> VecMathParser::MultExprContext::primary() {
  return getRuleContexts<VecMathParser::PrimaryContext>();
}

VecMathParser::PrimaryContext* VecMathParser::MultExprContext::primary(size_t i) {
  return getRuleContext<VecMathParser::PrimaryContext>(i);
}

std::vector<tree::TerminalNode *> VecMathParser::MultExprContext::MULT() {
  return getTokens(VecMathParser::MULT);
}

tree::TerminalNode* VecMathParser::MultExprContext::MULT(size_t i) {
  return getToken(VecMathParser::MULT, i);
}


size_t VecMathParser::MultExprContext::getRuleIndex() const {
  return VecMathParser::RuleMultExpr;
}

void VecMathParser::MultExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMultExpr(this);
}

void VecMathParser::MultExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMultExpr(this);
}


std::any VecMathParser::MultExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VecMathVisitor*>(visitor))
    return parserVisitor->visitMultExpr(this);
  else
    return visitor->visitChildren(this);
}

VecMathParser::MultExprContext* VecMathParser::multExpr() {
  MultExprContext *_localctx = _tracker.createInstance<MultExprContext>(_ctx, getState());
  enterRule(_localctx, 6, VecMathParser::RuleMultExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    primary();
    setState(35);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == VecMathParser::T__3

    || _la == VecMathParser::MULT) {
      setState(31);
      _la = _input->LA(1);
      if (!(_la == VecMathParser::T__3

      || _la == VecMathParser::MULT)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(32);
      primary();
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryContext ------------------------------------------------------------------

VecMathParser::PrimaryContext::PrimaryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VecMathParser::PrimaryContext::INT() {
  return getToken(VecMathParser::INT, 0);
}

tree::TerminalNode* VecMathParser::PrimaryContext::ID() {
  return getToken(VecMathParser::ID, 0);
}

std::vector<VecMathParser::ExprContext *> VecMathParser::PrimaryContext::expr() {
  return getRuleContexts<VecMathParser::ExprContext>();
}

VecMathParser::ExprContext* VecMathParser::PrimaryContext::expr(size_t i) {
  return getRuleContext<VecMathParser::ExprContext>(i);
}


size_t VecMathParser::PrimaryContext::getRuleIndex() const {
  return VecMathParser::RulePrimary;
}

void VecMathParser::PrimaryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimary(this);
}

void VecMathParser::PrimaryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<VecMathListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimary(this);
}


std::any VecMathParser::PrimaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VecMathVisitor*>(visitor))
    return parserVisitor->visitPrimary(this);
  else
    return visitor->visitChildren(this);
}

VecMathParser::PrimaryContext* VecMathParser::primary() {
  PrimaryContext *_localctx = _tracker.createInstance<PrimaryContext>(_ctx, getState());
  enterRule(_localctx, 8, VecMathParser::RulePrimary);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case VecMathParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(38);
        match(VecMathParser::INT);
        break;
      }

      case VecMathParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(39);
        match(VecMathParser::ID);
        break;
      }

      case VecMathParser::T__4: {
        enterOuterAlt(_localctx, 3);
        setState(40);
        match(VecMathParser::T__4);
        setState(41);
        expr();
        setState(46);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == VecMathParser::T__5) {
          setState(42);
          match(VecMathParser::T__5);
          setState(43);
          expr();
          setState(48);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(49);
        match(VecMathParser::T__6);
        break;
      }

      case VecMathParser::T__7: {
        enterOuterAlt(_localctx, 4);
        setState(51);
        match(VecMathParser::T__7);
        setState(52);
        expr();
        setState(53);
        match(VecMathParser::T__8);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void VecMathParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  vecmathParserInitialize();
#else
  ::antlr4::internal::call_once(vecmathParserOnceFlag, vecmathParserInitialize);
#endif
}
